--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@
     background-color: #534641;
     color: #D5BBB1;
 }
+/* 
+.btn-fun:hover{
+    transform: translateY(-10px);
+    background-color: #534641;
+    color: #D5BBB1;
+} */
 
 
 
